--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+
+
 *, *:after, *:before {
   box-sizing: border-box;
 }
@@ -5,10 +7,19 @@
 body,
 html {
   height: 100%;
+  overflow: hidden;
+  font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.custom-font {
+  line-height: 40px;
+  font-size: 15px;
+  text-transform: uppercase;
 }
 
 .full {
   height: 100%;
+  width: 100%;
 }
 
 .center {
@@ -16,3 +27,77 @@ html {
   justify-content: center;
   align-items: center;
 }
+
+.form-input {
+  max-width: 100%;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  height: 20px;
+  line-height: 20px;
+  font-size: 20px;
+  border-bottom: solid 1px #b3b2ca;
+  transition: all .23s ease-in;
+  margin-bottom: 20px;
+}
+
+.form-input:focus {
+  border-bottom: solid 1.5px #5d5d8a;
+  outline: none
+}
+
+.btn {
+  color: white;
+  width: 100%;
+  height: 40px;
+  border-radius: 10px;
+  border: none;
+  text-align: center;
+  background-color: #0f7a5f;
+}
+
+.btn:hover {
+  background-color: #08634c;
+}
+
+.app-number {
+  line-height: 40px;
+  font-size: 200px;
+  text-transform: uppercase;
+  color: #08634c;
+  font-weight: lighter;
+}
+
+.app-header {
+  position: absolute;
+}
+
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 20px;
+  position: fixed;
+  z-index: 999;
+  width: 100%;
+}
+
+.inline > p {
+  display: inline-block;
+}
+
+.minus, .number, .plus {
+  height: 100%;
+  width: calc(100%/3)
+}
+
+.minus-btn, .plus-btn {
+  line-height: 40px;
+  font-size: 150px;
+  text-transform: uppercase;
+  color: grey;
+  font-weight: lighter;
+}
+
+
